* numeric.c (rb_infinity, rb_nan): use WORDS_BIGENDIAN to get endian.   fix [Bug #5160] [ruby-dev:44356]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_3@32863 b2dd03c8-39d4-4d8f-98ff-823fe69b080e